# simd-math-testing

./: CMakeLists.txt  README.md
test/: CMakeLists.txt  exercise_9_solution.cpp  test_env.cpp
test/avx-tests/: test_simd_avx_permute.cpp
test/avx512-tests/: test_simd_avx512_permute.cpp
test/cuda-tests/: exercise_10_solution.cpp  test_simd_cuda_permute.cpp
test/hip-tests/: hip-abs-test.cpp  hip-tests.cpp  test_simd_hip_permute.cpp
